--- a/02-variables.tex
+++ b/02-variables.tex
@@ -1,7 +1,7 @@
 % LaTeX source for ``Python for Informatics: Exploring Information''
 % Copyright (c)  2010-  Charles R. Severance, All Rights Reserved
 
-\chapter{Variables, expressions and statements}
+\chapter{Variables, expressions, and statements}
 
 \section{Values and types}
 \index{value}
@@ -12,11 +12,11 @@ A {\bf value} is one of the basic things a program works with,
 like a letter or a
 number.  The values we have seen so far
 are {\tt 1}, {\tt 2}, and
-\verb"'Hello, World!'".
+\verb"'Hello, World!'"
 
 These values belong to different {\bf types}:
 {\tt 2} is an integer, and \verb"'Hello, World!'" is a {\bf string},
-so-called because it contains a ``string'' of letters.
+so called because it contains a ``string'' of letters.
 You (and the interpreter) can identify
 strings because they are enclosed in quotation marks.
 
@@ -45,10 +45,10 @@ If you are not sure what type a value has, the interpreter can tell you.
 \afterverb
 %
 Not surprisingly, strings belong to the type {\tt str} and
-integers belong to the type {\tt int}.  Less obvious, numbers
+integers belong to the type {\tt int}.  Less obviously, numbers
 with a decimal point belong to a type called {\tt float},
 because these numbers are represented in a
-format called {\bf floating-point}.
+format called {\bf floating point}.
 
 \index{type}
 \index{string type}
@@ -160,10 +160,10 @@ The type of a variable is the type of the value it refers to.
 \index{keyword}
 
 Programmers generally choose names for their variables that
-are meaningful---they document what the variable is used for.
+are meaningful and document what the variable is used for.
 
 Variable names can be arbitrarily long.  They can contain
-both letters and numbers, but they have to begin with a letter.
+both letters and numbers, but they cannot start with a number.
 It is legal to use uppercase letters, but it is a good idea
 to begin variable names with a lowercase letter (you'll
 see why later).
@@ -172,7 +172,7 @@ The underscore character (\verb"_") can appear in a name.
 It is often used in names with multiple words, such as
 \verb"my_name" or \verb"airspeed_of_unladen_swallow".
 Variable names can start with an underscore character, but
-we generally avoid using it unles we are writing library 
+we generally avoid doing this unless we are writing library 
 code for others to use.
 
 \index{underscore character}
@@ -190,7 +190,7 @@ SyntaxError: invalid syntax
 \end{verbatim}
 \afterverb
 %
-{\tt 76trombones} is illegal because it does not begin with a letter.
+{\tt 76trombones} is illegal because it begins with a number.
 {\tt more@} is illegal because it contains an illegal character, {\tt
 @}.  But what's wrong with {\tt class}?
 
@@ -268,8 +268,8 @@ The assignment statement produces no output.
 addition and multiplication.  The values the operator is applied to
 are called {\bf operands}.
 
-The operators {\tt +}, {\tt -}, {\tt *}, {\tt /} and {\tt **}
-perform addition, subtraction, multiplication, division and
+The operators {\tt +}, {\tt -}, {\tt *}, {\tt /}, and {\tt **}
+perform addition, subtraction, multiplication, division, and
 exponentiation, as in the following examples:
 
 \beforeverb
@@ -302,11 +302,11 @@ In Python 3.0, the new operator
 \index{division!floating-point}
 
 When both of the operands are integers, the result is also an
-integer; floor division chops off the fraction
-part, so in this example it rounds down to zero.
+integer; floor division chops off the fractional
+part, so in this example it truncates the answer to zero.
 
-If either of the operands is a floating-point number, Python performs
-floating-point division, and the result is a {\tt float}:
+If either of the operands is a floating point number, Python performs
+floating point division, and the result is a {\tt float}:
 
 \beforeverb
 \begin{verbatim}
@@ -394,12 +394,12 @@ have the same precedence.  So {\tt 2*3-1} is 5, not 4, and
 {\tt 6+4/2} is 8, not 5.
 
 \item Operators with the same precedence are evaluated from left to 
-right.  So in the expression {\tt 5-3-1} is 1, not 3 because the
+right.  So the expression {\tt 5-3-1} is 1, not 3, because the
 {\tt 5-3} happens first and then {\tt 1} is subtracted from {\tt 2}.
 
 \end{itemize}
 
-When in doubt always put parentheses in your expressions to make sure
+When in doubt, always put parentheses in your expressions to make sure
 the computations are performed in the order you intend.
 
 \section{Modulus operator}
@@ -431,9 +431,9 @@ example, you can check whether one number is divisible by another---if
 
 \index{divisibility}
 
-Also, you can extract the right-most digit
+You can also extract the right-most digit
 or digits from a number.  For example, {\tt x \% 10} yields the
-right-most digit of {\tt x} (in base 10).  Similarly {\tt x \% 100}
+right-most digit of {\tt x} (in base 10).  Similarly, {\tt x \% 100}
 yields the last two digits.
 
 
@@ -445,7 +445,7 @@ yields the last two digits.
 The {\tt +} operator works with strings, but it
 is not addition in the mathematical sense. Instead it performs
 {\bf concatenation}, which means joining the strings by
-linking them end-to-end.  For example:
+linking them end to end.  For example:
 
 \index{concatenation}
 
@@ -556,7 +556,7 @@ look at a piece of code and figure out what it is doing, or why.
 
 For this reason, it is a good idea to add notes to your programs to explain
 in natural language what the program is doing.  These notes are called
-{\bf comments}, and they start with the \verb"#" symbol:
+{\bf comments}, and in Python they start with the \verb"#" symbol:
 
 \beforeverb
 \begin{verbatim}
@@ -599,7 +599,7 @@ v = 5     # velocity in meters/second.
 %
 Good variable names can reduce the need for comments, but
 long names can make complex expressions hard to read, so there is
-a tradeoff.
+a trade-off.
 
 \section{Choosing mnemonic variable names}
 
@@ -635,10 +635,10 @@ The Python interpreter sees all three of these programs as \emph{exactly the
 same} but humans see and understand these programs quite differently.  
 Humans will most quickly understand the {\bf intent} 
 of the second program because the 
-programmer has chosen variable names that reflect the intent of the programmer
+programmer has chosen variable names that reflect their intent
 regarding what data will be stored in each variable.
 
-We call these wisely-chosen variable names ``mnemonic variable names''.  The
+We call these wisely chosen variable names ``mnemonic variable names''.  The
 word \emph{mnemonic}\footnote{See 
 \url{http://en.wikipedia.org/wiki/Mnemonic}
 for an extended description of the word ``mnemonic''.} 
@@ -650,7 +650,7 @@ While this all sounds great, and it is a very good idea to use mnemonic variable
 names, mnemonic variable names can get in the way of a beginning programmer's 
 ability to parse and understand code.  This is because beginning programmers 
 have not yet memorized the reserved words (there are only 31 of them) and sometimes
-variables which have names that are too descriptive start to look like 
+variables with names that are too descriptive start to look like 
 part of the language and not just well-chosen variable names.
 
 Take a quick look at the following Python sample code which loops through some data. 
@@ -697,7 +697,7 @@ and you will start to see the reserved words jumping out at you:
 
 The parts of the code that are defined by 
 Python ({\tt for}, {\tt in}, {\tt print}, and {\tt :}) are in bold
-and the programmer chosen variables ({\tt word} and {\tt words}) are not in bold.  
+and the programmer-chosen variables ({\tt word} and {\tt words}) are not in bold.  
 Many text editors are aware of Python
 syntax and will color reserved words differently to give you clues to keep 
 your variables and reserved words separate.
@@ -707,7 +707,7 @@ is a variable and what is a reserved word.
 \section{Debugging}
 \index{debugging}
 
-At this point the syntax error you are most likely to make is
+At this point, the syntax error you are most likely to make is
 an illegal variable name, like {\tt class} and {\tt yield}, which
 are keywords, or \verb"odd~job" and \verb"US$", which contain
 illegal characters.
@@ -754,7 +754,7 @@ same as {\tt latex}.
 \index{semantic error}
 \index{error!semantic}
 
-At this point the most likely cause of a semantic error is
+At this point, the most likely cause of a semantic error is
 the order of operations.  For example, to evaluate $\frac{1}{2 \pi}$,
 you might be tempted to write
 
@@ -779,7 +779,7 @@ get an error message; you just get the wrong answer.
 \item[assignment:]  A statement that assigns a value to a variable.
 \index{assignment}
 
-\item[concatenate:]  To join two operands end-to-end.
+\item[concatenate:]  To join two operands end to end.
 \index{concatenation}
 
 \item[comment:]  Information in a program that is meant for other
@@ -794,12 +794,12 @@ in order to yield a single value.
 represents a single result value.
 \index{expression}
 
-\item[floating-point:] A type that represents numbers with fractional
+\item[floating point:] A type that represents numbers with fractional
 parts.
 \index{floating-point}
 
 \item[floor division:] The operation that divides two numbers and chops off
-the fraction part.
+the fractional part.
 \index{floor division}
 
 \item[integer:] A type that represents whole numbers.
@@ -840,7 +840,7 @@ far, the statements we have seen are assignments and print statements.
 \index{string}
 
 \item[type:] A category of values.  The types we have seen so far
-are integers (type {\tt int}), floating-point numbers (type {\tt
+are integers (type {\tt int}), floating point numbers (type {\tt
 float}), and strings (type {\tt str}).
 \index{type}
 
@@ -909,7 +909,7 @@ Use the Python interpreter to check your answers.
 
 \begin{ex}
 Write a program which prompts the user for a Celsius temperature,
-convert the temperature to Fahrenheit and print out the converted
+convert the temperature to Fahrenheit, and print out the converted
 temperature.
 \end{ex}
 
